--- a/src/views/InvitesView/styles.css
+++ b/src/views/InvitesView/styles.css
@@ -1,12 +1,19 @@
+.ContentView {
+  min-height: 80vh;
+  height: fit-content;
+}
+
 .InvitesView {
-  height: 80vh;
   display: flex;
   flex-wrap: wrap;
 }
 
 @media only screen and (max-width: 600px) {
-  .InvitesView {
+  .ContentView {
     width: 100vw;
-    height: 80vh;
+    min-height: 80vh;
+    height: fit-content;
+  }
+  .InvitesView {
   }
 }
